# MicrocontrollerEmulator

./: CMakeLists.txt  README.md  emulator  firmware.elf  instructions2.txt  log.txt  log2.txt  test  test.pub
elf/: main.c  setup.c
include/: cpu.hpp  nvic.hpp  system.hpp
src/: cpu.cpp  emulator.cpp  main.cpp  prog.elf  system.cpp  test.cpp
